# ferris-db

./: .dockerignore  .gitignore  AGENTS.md  COMMAND_COVERAGE_ANALYSIS.md  Cargo.toml  DATA_STRUCTURES.md  DESIGN.md  Dockerfile  PERFORMANCE.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  README.md  REDIS_COMMANDS.md  ROADMAP.md  ROADMAP_UPDATED.md  SESSION_SUMMARY.md  STATUS.md  THROUGHPUT.md  TODO.md  benchmark-report.json  parity-report.json  test_legacy_commands.sh
.github/workflows/: ci.yml  release.yml
docs/site/: index.html
ferris-commands/: Cargo.toml
ferris-commands/src/: acl.rs  cluster.rs  connection.rs  context.rs  dlock.rs  dqueue.rs  error.rs  executor.rs  geo.rs  hash.rs  hyperloglog.rs  key.rs  lib.rs  list.rs  pubsub.rs  registry.rs  replication.rs  scripting.rs  server.rs  set.rs  sorted_set.rs  stream.rs  string.rs  transaction.rs
ferris-core/: Cargo.toml
ferris-core/benches/: keystore.rs
ferris-core/src/: blocking.rs  dqueue_manager.rs  expiry.rs  lib.rs  memory.rs  pubsub.rs  serialization.rs  store.rs  value.rs  watch_registry.rs
ferris-crdt/: Cargo.toml
ferris-crdt/src/: lib.rs
ferris-lock/: Cargo.toml
ferris-lock/src/: lib.rs
ferris-network/: Cargo.toml
ferris-network/src/: connection.rs  lib.rs  listener.rs  shutdown.rs
ferris-network/tests/: acl_commands.rs  aof_commands.rs  blocking_commands.rs  client_commands.rs  cluster_commands.rs  command_replication.rs  comprehensive_e2e.rs  connection_commands.rs  consistency_modes.rs  dlock_dqueue.rs  dump_restore_migrate.rs  integration.rs  pubsub_commands.rs  readonly_replica.rs  replication_commands.rs  scripting_commands.rs  stream_commands.rs  transaction_commands.rs
ferris-persistence/: Cargo.toml
ferris-persistence/src/: aof.rs  error.rs  fsync.rs  lib.rs
ferris-protocol/: Cargo.toml
ferris-protocol/src/: codec.rs  command.rs  error.rs  lib.rs  resp2.rs  resp3.rs  types.rs
ferris-queue/: Cargo.toml
ferris-queue/src/: lib.rs
ferris-replication/: Cargo.toml
ferris-replication/src/: backlog.rs  cluster.rs  consistency.rs  follower.rs  follower_tracker.rs  lib.rs  manager.rs  state.rs
ferris-server/: Cargo.toml
ferris-server/src/: main.rs
ferris-test-utils/: Cargo.toml
ferris-test-utils/src/: client.rs  generators.rs  lib.rs  server.rs
parity-tests/: Cargo.toml  PARITY_RESULTS.md  benchmark-report.json  parity-report.json
parity-tests/src/: benchmark.rs  client.rs  comparison.rs  lib.rs  main.rs  report.rs
parity-tests/src/commands/: edge_cases.rs  hash.rs  key.rs  list.rs  mod.rs  server.rs  set.rs  sorted_set.rs  sorted_set_edge.rs  string.rs
scripts/: run_parity_tests.sh
