[workspace]
resolver = "2"
members = [
    "ferris-server",
    "ferris-core",
    "ferris-protocol",
    "ferris-commands",
    "ferris-network",
    "ferris-persistence",
    "ferris-replication",
    "ferris-crdt",
    "ferris-queue",
    "ferris-lock",
    "ferris-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ferris-db contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conductoross/redis-rust"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = "0.23"

# Data structures
bytes = "1"
dashmap = "6"
parking_lot = "0.12"
crossbeam = "0.8"
ordered-float = "4"

# Hashing
crc16 = "0.4"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
glob-match = "0.2"

# Testing
proptest = "1"
criterion = "0.5"

# Internal crates
ferris-core = { path = "ferris-core" }
ferris-protocol = { path = "ferris-protocol" }
ferris-commands = { path = "ferris-commands" }
ferris-network = { path = "ferris-network" }
ferris-persistence = { path = "ferris-persistence" }
ferris-replication = { path = "ferris-replication" }
ferris-crdt = { path = "ferris-crdt" }
ferris-queue = { path = "ferris-queue" }
ferris-lock = { path = "ferris-lock" }
ferris-test-utils = { path = "ferris-test-utils" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
