[package]
name = "ferris-crdt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Conflict-free replicated data types for ferris-db"

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
ordered-float.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
