[package]
name = "ferris-lock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Distributed lock implementation for ferris-db"

[dependencies]
ferris-core.workspace = true

bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
ferris-test-utils.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
