[package]
name = "ferris-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Networking layer for ferris-db"

[dependencies]
ferris-protocol.workspace = true
ferris-commands.workspace = true
ferris-core.workspace = true
ferris-persistence.workspace = true

tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ferris-test-utils.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
