[package]
name = "ferris-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AOF persistence engine for ferris-db"

[dependencies]
ferris-protocol.workspace = true

tokio = { workspace = true, features = ["fs", "sync", "io-util"] }
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
