[package]
name = "ferris-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ferris-db server binary - Redis-compatible distributed key-value store"

[[bin]]
name = "ferris-db"
path = "src/main.rs"

[dependencies]
ferris-core.workspace = true
ferris-protocol.workspace = true
ferris-commands.workspace = true
ferris-network.workspace = true
ferris-persistence.workspace = true

tokio.workspace = true
bytes.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Use jemalloc as global allocator for better performance on large allocations
tikv-jemallocator.workspace = true

[dev-dependencies]
ferris-test-utils.workspace = true

[lints]
workspace = true
