[package]
name = "ferris-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Test utilities for ferris-db"

[dependencies]
ferris-protocol.workspace = true
ferris-core.workspace = true
ferris-commands.workspace = true
ferris-network.workspace = true

tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
proptest.workspace = true

[lints]
workspace = true
