[package]
name = "parity-tests"
version = "0.1.0"
edition = "2021"
description = "Redis parity tests for ferris-db"
publish = false

[[bin]]
name = "parity-tests"
path = "src/main.rs"

[dependencies]
# Protocol handling
ferris-protocol.workspace = true
bytes.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization (for reports)
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Logging
tracing.workspace = true

# Testing utilities
colored = "2"
async-trait = "0.1"

[dev-dependencies]
# Benchmarking
criterion = { workspace = true, features = ["async_tokio"] }

# Benchmarks will be added later
# [[bench]]
# name = "performance"
# harness = false

[lints]
workspace = true
